[package]
name = "application"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lynch = { path = "../lynch", version = "0.0.1-dev"}
frost = { path = "../frost", version = "0.0.1-dev"}
ash = { version = "0.37.0", features = ["linked", "debug"]}
winit = "0.27.0"
glam = "0.20.2"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"
imgui = "0.11.0"
imgui-winit-support = "^0.11"