[package]
name = "frost"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
shred = "0.15.0"
hibitset = "0.6.4"
env_logger = "0.10.1"
winit = "0.27"
glam = "0.20.2"
smallvec = "1.11.2"
arrayvec = "0.7.4"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "ecs"
harness = false